# clipstack-core

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  UI_QUICKSTART.md  docker-compose.yml
.github/workflows/: ci.yml
docs/: api.md  architecture.md  auth.md  closed-loop.md  deployment.md  observability.md  openapi-README.md  openapi.yaml
docs/dr/: README.md  drill-log.md  incident-response.md  runbook-bandit-state.md  runbook-data-corruption.md  runbook-postgres.md  runbook-services.md  runbook.md  sla.md  status-page.md
infra/litellm/: config.yaml
legal/: AI-Disclosure.md  DPA.md  IP-Ownership.md  Privacy.md  README.md  ToS.md
scripts/: check-core-isolation.sh
services/adapters/: README.md
services/adapters/ads/: base.py  base.ts
services/adapters/analytics/: base.py  base.ts
services/adapters/chat/: base.py  base.ts
services/adapters/cms/: base.py  base.ts
services/adapters/crm/: base.py  base.ts
services/adapters/email/: base.py  base.ts
services/adapters/seo/: base.py  base.ts
services/adapters/video/: base.py  base.ts
services/agent-crewai/: Dockerfile  README.md  main.py  models.py  observability.py  pyproject.toml
services/agent-crewai/crews/: __init__.py
services/agent-crewai/crews/algorithm_probe/: __init__.py  crew.py
services/agent-crewai/crews/content_factory/: __init__.py  agents.py  crew.py  tasks.py
services/agent-crewai/crews/engagement/: __init__.py  crew.py
services/agent-crewai/crews/lifecycle/: __init__.py  crew.py
services/agent-crewai/crews/live_event_monitor/: __init__.py  crew.py
services/agent-crewai/crews/trend_detector/: __init__.py  crew.py
services/agent-crewai/prompts/guardrails/: .gitkeep
services/agent-crewai/prompts/tasks/: .gitkeep
services/agent-crewai/prompts/voice/: .gitkeep
services/agent-crewai/tests/: conftest.py  test_app_health.py  test_crew_construction.py  test_tools_hashtag_intel.py  test_tools_recall_lessons.py  test_tools_recent_anomalies.py  test_tools_register_bandit.py  test_tools_retrieve_high_performers.py  test_tools_voice_score.py
services/agent-crewai/tools/: __init__.py  asset_search.py  brand_safety_check.py  claim_verifier.py  hashtag_intel.py  pay_and_fetch.py  recall_lessons.py  recent_anomalies.py  register_bandit.py  retrieve_high_performers.py  voice_score.py
services/agent-langgraph/: Dockerfile  README.md  main.py  observability.py  producer.py  pyproject.toml
services/agent-langgraph/tests/: conftest.py  test_app_health.py  test_producer.py  test_publish_pipeline_graph.py  test_publish_pipeline_nodes.py
services/agent-langgraph/workflows/: __init__.py
services/agent-langgraph/workflows/publish_pipeline/: __init__.py  graph.py  nodes.py  state.py
services/approval-ui/: .gitignore  drizzle.config.ts  next.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.e2e.json  tsconfig.json
services/approval-ui/app/: error.tsx  fonts.ts  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
services/approval-ui/app/activity/: loading.tsx  page.tsx
services/approval-ui/app/calendar/: page.tsx
services/approval-ui/app/experiments/: loading.tsx  page.tsx
services/approval-ui/app/inbox/: loading.tsx  page.tsx
services/approval-ui/app/login/: page.tsx
services/approval-ui/app/members/: page.tsx
services/approval-ui/app/performance/: loading.tsx  page.tsx
services/approval-ui/app/settings/: page.tsx
services/approval-ui/app/studio/: page.tsx
services/approval-ui/app/workspace/: page.tsx
services/approval-ui/components/: AgentMark.tsx
services/approval-ui/components/branch-view/: BranchNode.tsx  BranchView.tsx  buildTree.ts  index.ts  types.ts
services/approval-ui/components/draft/: ApprovalActions.tsx
services/approval-ui/components/keyboard/: CommandPalette.tsx  HelpDialog.tsx  KeyboardShortcuts.tsx
services/approval-ui/components/layout/: AppShell.tsx  Sidebar.tsx  TopBar.tsx
services/approval-ui/components/mission-control/: AgentActivityTile.tsx  AnomaliesTile.tsx  ApprovalQueueTile.tsx  BusHealthTile.tsx  ExperimentsTile.tsx  HeroKpiTile.tsx  InstitutionalMemoryTile.tsx  MetricTile.tsx  Sparkline.tsx
services/approval-ui/components/ui/: badge.tsx  button.tsx  card.tsx  skeleton.tsx  toast.tsx
services/approval-ui/lib/: utils.ts
services/approval-ui/lib/api/: README.md  audit.ts  auth.ts  embeddings.ts  errors.ts  respond.ts  session.ts  workos.ts
services/approval-ui/lib/asset-adapters/: _shared.ts  elevenlabs.ts  higgsfield.ts  hyperframes-shim.ts  luma.ts  motion.ts  registry.ts  runway.ts  satori.ts  suno.ts  types.ts
services/approval-ui/lib/db/: README.md  client.ts
services/approval-ui/lib/managed-agents/: client.ts  digest-agent.ts  voice.ts
services/approval-ui/scripts/: README.md  dev-setup.sh  publish-mira-voice.ts  seed-demo.ts  setup-managed-agents.ts  smoke-test-managed-agents.ts  update-managed-agents.ts
services/bandit-orchestrator/: BACKUP.md  Dockerfile  README.md  backup.py  consumer.py  main.py  pyproject.toml
services/output-moderation/: Dockerfile  README.md  main.py  pyproject.toml
services/percentile-predictor/: Dockerfile  README.md  features.py  main.py  pyproject.toml
services/performance-ingest/: Dockerfile  README.md  histograms.py  main.py  persist.py  producer.py  pyproject.toml  velocity.py
services/pii-detection/: Dockerfile  README.md  main.py  pyproject.toml  recognizers.py
services/shared/: README.md  feature-flags.ts  feature_flags.py
services/shared/db/: README.md  middleware.md
services/shared/events/: README.md  envelope.py  envelope.ts  schemas.py  schemas.ts  topics.py  topics.ts
services/shared/schemas/: __init__.py  agent.py  agent.ts  approval.py  approval.ts  audit.py  audit.ts  claim.py  claim.ts  company.py  company.ts  draft.py  draft.ts  lesson.py  lesson.ts  metering.py  metering.ts  permission.py  permission.ts  role.py  role.ts
services/voice-scorer/: Dockerfile  README.md  main.py  pyproject.toml
tests/integration/: cross-tenant-rls.sql  run-rls-test.sh
(+58 files in other folders)
