[project]
name = "clipstack-agent-crewai"
version = "0.1.0"
description = "CrewAI role-based pipelines for Clipstack core. Per Doc 1 §7.1."
requires-python = ">=3.11"
dependencies = [
  "crewai>=0.86.0",
  "crewai-tools>=0.25.0",
  "litellm>=1.55.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "qdrant-client>=1.12.0",
  "httpx>=0.27.0",
  "structlog>=24.4.0",
  "tenacity>=9.0.0",
  # Phase B.5 observability — Langfuse self-host pushes here.
  "langfuse>=2.50.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.7.0",
  "mypy>=1.13.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "S", "PT"]
ignore = ["S101"]  # asserts ok in tests

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
