[project]
name = "clipstack-agent-langgraph"
version = "0.1.0"
description = "LangGraph stateful workflows for Clipstack core. Per Doc 1 §3."
requires-python = ">=3.11"
dependencies = [
  "langgraph>=0.2.45",
  "langgraph-checkpoint-postgres>=2.0.0",
  "langchain-core>=0.3.18",
  "litellm>=1.55.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "psycopg[binary]>=3.2.0",
  "httpx>=0.27.0",
  "structlog>=24.4.0",
  # Phase B.5 observability.
  "langfuse>=2.50.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.7.0",
  "mypy>=1.13.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "S", "PT"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
