[project]
name = "clipstack-bandit-orchestrator"
version = "0.1.0"
description = "Multi-armed bandit allocator for content variants. Doc 4 §2.3."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "httpx>=0.27.0",
  "structlog>=24.4.0",
]

[project.optional-dependencies]
# mabwiser + numpy land here when Thompson sampling wires (later A.3 slice).
ml = [
  "mabwiser>=2.7.0",
  "numpy>=1.26.0",
  "scipy>=1.13.0",
]
dev = [
  "ruff>=0.7.0",
  "mypy>=1.13.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "S", "PT"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
