[project]
name = "clipstack-bandit-orchestrator"
version = "0.1.0"
description = "Multi-armed bandit allocator for content variants. Doc 4 §2.3."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "httpx>=0.27.0",
  "structlog>=24.4.0",
]

[project.optional-dependencies]
# Stdlib `random.betavariate` covers vanilla Thompson sampling at K≈3-5
# arms, so the base service has no ML dep. The `ml` extra unlocks
# contextual bandits (mabwiser) when we need per-feature arm allocation
# (e.g. time-of-day-aware variant selection). Not required for the
# default Thompson path.
ml = [
  "mabwiser>=2.7.0",
  "numpy>=1.26.0",
  "scipy>=1.13.0",
]
# Auto-reward listener: subscribes to content.metric_update on Redpanda
# and updates posteriors in-process. Closes the generate→publish→
# measure→learn loop without a manual /reward roundtrip per metric.
# boto3 powers the optional periodic S3-compatible state backup so a
# container restart that loses the volume doesn't lose every workspace's
# Thompson posteriors. Default-disabled; opt in via BANDIT_BACKUP_ENABLED.
runtime = [
  "aiokafka>=0.12.0",
  "boto3>=1.35.0",
]
dev = [
  "ruff>=0.7.0",
  "mypy>=1.13.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "S", "PT"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
