[project]
name = "clipstack-percentile-predictor"
version = "0.1.0"
description = "Pre-publish predicted-percentile gate. Doc 4 §2.4 / USP 1 retrieval pair."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "httpx>=0.27.0",
  "structlog>=24.4.0",
]

[project.optional-dependencies]
# LightGBM + numpy/pandas land here when training is wired (later A.3 slice).
# Stub mode skips the heavy dependencies — the image stays small until needed.
ml = [
  "lightgbm>=4.5.0",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "scikit-learn>=1.5.0",
]
dev = [
  "ruff>=0.7.0",
  "mypy>=1.13.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "S", "PT"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
