[project]
name = "clipstack-voice-scorer"
version = "0.1.0"
description = "Voice fingerprinting service — USP 3. SetFit classifier + Qdrant-backed exemplar retrieval."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "httpx>=0.27.0",
  "structlog>=24.4.0",
  "qdrant-client>=1.12.0",
  "tenacity>=9.0.0",
]

[project.optional-dependencies]
# SetFit + sentence-transformers land here once the trainer is wired (A.2 late
# or B). Phase A.1 stub mode skips the heavy dependencies.
ml = [
  "setfit>=1.1.0",
  "sentence-transformers>=3.3.0",
  "scikit-learn>=1.5.0",
]
dev = [
  "ruff>=0.7.0",
  "mypy>=1.13.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "S", "PT"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
